--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 		"test": "vitest",
 		"cf-typegen": "wrangler types"
 	},
+	"dependencies": {
+		"linkedom": "0.18.9",
+		"openai": "4.86.2",
+		"resend": "4.1.2"
+	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.7.5",
-		"@cloudflare/workers-types": "^4.20250303.0",
-		"typescript": "^5.5.2",
-		"vitest": "~3.0.7",
-		"wrangler": "^3.112.0"
+		"@cloudflare/workers-types": "4.20250303.0",
+		"prettier": "3.5.3",
+		"typescript": "5.8.2",
+		"wrangler": "3.112.0"
 	}
 }
