--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@mozilla/readability": "0.6.0",
 		"linkedom": "0.18.9",
 		"openai": "4.86.2",
 		"resend": "4.1.2"
