--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"@react-email/components": "0.0.33",
 		"@react-email/render": "1.0.5",
 		"linkedom": "0.18.9",
-		"openai": "4.86.2",
+		"openai": "4.87.3",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
 		"react-email": "3.0.7",
@@ -20,15 +20,16 @@
 		"zod": "3.24.2"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "4.20250303.0",
+		"@cloudflare/workers-types": "4.20250311.0",
 		"@types/react": "19.0.10",
 		"prettier": "3.5.3",
 		"typescript": "5.8.2",
-		"wrangler": "3.112.0"
+		"wrangler": "3.114.1"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
-			"esbuild"
+			"esbuild",
+			"workerd"
 		]
 	}
 }
