--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"packageManager": "pnpm@10.6.2",
 	"scripts": {
-		"dev": "wrangler dev",
+		"dev": "wrangler dev --test-scheduled",
 		"dev:email": "email dev --dir src/emails"
 	},
 	"dependencies": {
